bug fixed: gap between svg and its father element

--- a/UI/static/dashboard/scss/horizon.scss
+++ b/UI/static/dashboard/scss/horizon.scss
@@ -1684,6 +1684,9 @@ label.log-length {
   border-color: #dedede;
   overflow: hidden;
 }
+#detail_box svg {
+  margin-bottom: -5px;
+}
 
 #node_icon {
   float: left;
